Style error pages

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/index.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/index.scss
@@ -57,6 +57,11 @@
   font-size: var(--fs-200);
 }
 
+// Reset counter globally
+#login-body {
+  counter-reset: section;
+}
+
 /* LAYOUT */
 html {
   font-size: 62.5%;
@@ -75,7 +80,8 @@ body.modal-open {
   padding-right: 0 !important;
 }
 
-/* Typography */
+/* TYPOGRAPHY */
+
 h1,
 h2 {
   color: var(--clr-primary-400);
@@ -93,20 +99,6 @@ h2 {
   line-height: 2.6rem;
 }
 
-.heading__contact {
-  color: var(--clr-primary-400);
-}
-
-// Reset counter globally
-#login-body {
-  counter-reset: section;
-}
-
-// Insert count
-.heading__contact::before {
-  counter-increment: section;
-  content: counter(section)". "
-}
 
 .page {
   &__heading {
@@ -275,11 +267,9 @@ header .container-fluid {
   header .container-fluid {
     padding: 0.8rem;
   }
-  .actions__lang,
-  .actions__user {
-    span {
-      display: none;
-    }
+  .language-select__locale,
+  .user__account-menu__name {
+    display: none;
   }
   .actions__lang svg {
     width: 3.2rem;
@@ -827,7 +817,7 @@ input ~ .font-danger {
 
 @media (max-width: 1000px) {
   /* Make status bar larger than the container */
-  .submit {
+  .container-escape {
     width: 100vw;
     position: relative;
     margin-left: -50vw;
@@ -840,11 +830,10 @@ input ~ .font-danger {
 
 @media (max-width: 640px) {
   /* Don't show step name on small screens */
-  ul span {
+  .statuslist .status {
     display: none;
   }
 }
-
 
 
 //////
@@ -946,7 +935,7 @@ input ~ .font-danger {
   }
 }
 
-// Overview
+// User Creation: Overview
 .overview {
   .common-region {
     font-size: var(--fs-400);
@@ -977,6 +966,65 @@ input ~ .font-danger {
     margin: 0;
   }
 }
+
+/* Error pages */
+#zlbEPflicht #navigation {
+  display: none;
+
+}
+
+[action^="/goobi/uii/error.xhtml"] {
+  font-size: var(--fs-400);
+}
+
+[action^="/goobi/uii/error.xhtml"] h1 {
+  margin: 2.4rem 0;
+  font-size: 4.8rem;
+}
+
+[action^="/goobi/uii/error.xhtml"] h4 {
+  font-size: 2.4rem;
+  color: var(--clr-primary-400);
+}
+
+[action^="/goobi/uii/error.xhtml"] .stats {
+
+  padding: 0;
+}
+
+
+[action^="/goobi/uii/error.xhtml"] * {
+
+  font-size: 1.8rem;
+}
+[action^="/goobi/uii/error.xhtml"] i {
+  margin-right: 8px;
+}
+
+[action^="/goobi/uii/error.xhtml"] .btn {
+  background-color: var(--clr-primary-400);
+  color: #fff;
+  padding: 8px;
+}
+
+[action^="/goobi/uii/error.xhtml"] p:first-of-type {
+  font-size: 2rem;
+  color: var(--clr-danger);
+}
+
+/* CONTACT PERSONS (USER CREATION) */
+.heading__contact {
+  color: var(--clr-primary-400);
+}
+
+// Insert count
+.heading__contact::before {
+  counter-increment: section;
+  content: counter(section)". "
+}
+
+
+/* MEDIA QUERIES */
 
 @media (max-width: 900px) {
   .common-region {
