Reduce font-size on error pages

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/index.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/index.scss
@@ -995,9 +995,9 @@ input ~ .font-danger {
 
 
 [action^="/goobi/uii/error.xhtml"] * {
-
-  font-size: 1.8rem;
+  font-size: var(--fs-400);
 }
+
 [action^="/goobi/uii/error.xhtml"] i {
   margin-right: 8px;
 }
