Add css build system + clean up css structure

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/bootstrap.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/bootstrap.scss
@@ -17,10 +17,10 @@
 @import "transitions";
 @import "dropdown";
 @import "button-group";
-@import "nav";
+// @import "nav";
 @import "navbar";
 @import "card";
-@import "accordion";
+// @import "accordion";
 @import "breadcrumb";
 @import "pagination";
 @import "badge";
@@ -32,8 +32,8 @@
 @import "modal";
 @import "tooltip";
 @import "popover";
-@import "carousel";
-@import "spinners";
+// @import "carousel";
+// @import "spinners";
 @import "offcanvas";
 
 // Helpers
