--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/reduced_content_template.html
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/reduced_content_template.html
@@ -62,12 +62,12 @@
         CSS
         ===================================== -->
 
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="template/assets/css/dist/bootstrap.css?v=#{HelperForm.buildVersion}" />
     <!-- Font Awesome -->
     <link rel="stylesheet" href="templatePG/css/lib/font-awesome.css?v=#{HelperForm.buildVersion}" />
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="template/assets/css/dist/bootstrap.min.css?v=#{HelperForm.buildVersion}" />
     <!-- ZLB styles -->
-    <link rel="stylesheet" href="template/assets/css/dist/custom.css?v=#{HelperForm.buildVersion}" />
+    <link rel="stylesheet" href="template/assets/css/dist/custom.min.css?v=#{HelperForm.buildVersion}" />
 
 
 
