--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/bootstrap.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/bootstrap.scss
@@ -18,23 +18,23 @@
 @import "dropdown";
 @import "button-group";
 // @import "nav";
-@import "navbar";
-@import "card";
+// @import "navbar";
+// @import "card";
 // @import "accordion";
-@import "breadcrumb";
-@import "pagination";
-@import "badge";
+// @import "breadcrumb";
+// @import "pagination";
+// @import "badge";
 @import "alert";
-@import "progress";
+// @import "progress";
 @import "list-group";
 @import "close";
-@import "toasts";
+// @import "toasts";
 @import "modal";
 @import "tooltip";
 @import "popover";
 // @import "carousel";
 // @import "spinners";
-@import "offcanvas";
+// @import "offcanvas";
 
 // Helpers
 @import "helpers";
