--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/custom.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/custom.scss
@@ -426,11 +426,13 @@ section .overview .form-check {
 }
 
 /* VALIDATION */
-.validate--danger input {
+.validate--danger input,
+.validate--danger select {
   border-color: var(--clr-danger);
 }
 
-input ~ .font-danger {
+input ~ .font-danger,
+select ~ .font-danger {
   color: var(--clr-danger);
   font-size: var(--fs-200);
 }
@@ -489,7 +491,8 @@ input ~ .font-danger {
   vertical-align: super;
 }
 
-.form-control {
+.form-control,
+.form-select {
   padding: 0.375em 0.75em;
   font-size: 1.6rem;
 }
