Widen column gap

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/custom.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/custom.scss
@@ -603,7 +603,7 @@ select ~ .font-danger {
   display: grid;
   grid-template-columns: var(--grid-tc);
   grid-auto-rows: auto;
-  gap: var(--gap);
+  // gap: var(--gap);
   row-gap: calc(var(--gap) + 1rem);
   column-gap: calc(var(--gap) + 3rem);
   align-items: baseline; // align items when some show info/error message
