--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/custom.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/custom.scss
@@ -108,6 +108,10 @@ h2 {
     justify-content: space-between;
     align-items: center;
     margin: 8rem 0 6.4rem 0;
+    padding: 0;
+    text-transform: none;
+    border: 0;
+    font-size: 2.8rem;
   }
   &__help {
     padding-right: 0;
