--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/custom.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/custom.scss
@@ -234,6 +234,10 @@ header .container-fluid {
 
 .user__account-menu__name {
   margin-right: 8px;
+
+  img {
+    max-height: 4rem;
+  }
 }
 
 .dropdown-menu span,
