Add a `back to login` button

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/account_creation_wizzard.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/account_creation_wizzard.xhtml
@@ -368,8 +368,11 @@
             <section class="common-region">
                 <h:outputText
                     escape="false"
-                    value="#{msgs.login_new_account_confirmEmail}" />
+                    value="#{msgs.plugin_rest_usercreation_new_account_confirmEmail}" />
             </section>
+
+            <a href="external_index.xhtml" class="btn btn-primary-400 ms-auto">#{msgs.plugin_rest_usercreation_backToLogin}</a>
+
 
         </ui:fragment>
 
