--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/external_login.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/external_login.xhtml
@@ -27,9 +27,9 @@
                     value="Developer Mode ON"
                     rendered="#{DevModeBean.developerMode}" />
                 <ui:fragment rendered="#{!LoginForm.oidcAutoRedirect}">
-                    <h2 jsf:rendered="#{externalLoginBean.uiStatus != 'accountCreation'}">
+                    <h1 class="page__heading m-0 mb-3" jsf:rendered="#{externalLoginBean.uiStatus != 'accountCreation'}">
                         <h:outputText value="#{msgs.login}" />
-                    </h2>
+                    </h1>
                     <h:form
                         styleClass="form-validate #{externalLoginBean.uiStatus != 'accountCreation' ? '' : 'd-grid'}"
                         id="loginForm"
@@ -152,7 +152,7 @@
                                     <button
                                         jsf:id="resetPassword"
                                         class="btn btn-link">
-                                        <h:outputText value="#{msgs.login_new_account_resetPassword}" />
+                                        <h:outputText value="#{msgs.plugin_rest_usercreation_new_account_resetPassword}" />
                                         <f:setPropertyActionListener
                                             value="resetPassword"
                                             target="#{externalLoginBean.uiStatus}" />
@@ -197,7 +197,7 @@
                                     jsf:id="reset"
                                     jsf:action="#{LoginForm.resetPassword}"
                                     class="btn btn-primary-400">
-                                    <h:outputText value="#{msgs.login_new_account_resetPassword}" />
+                                    <h:outputText value="#{msgs.plugin_rest_usercreation_new_account_resetPassword}" />
                                     <f:setPropertyActionListener
                                         value=""
                                         target="#{externalLoginBean.uiStatus}" />
