Change message key namspaces

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/includes/zlb-progress.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/includes/zlb-progress.xhtml
@@ -14,7 +14,7 @@
 
 <composite:implementation>
 
-<c:set var="steps" value="#{[['page1', 'done'], ['page2', 'active'], ['page3', 'pending'], ['page4', 'pending'], ['page5', 'pending']]}" />
+<c:set var="steps" value="#{[['plugin_rest_usercreation_page1', 'done'], ['plugin_rest_usercreation_page2', 'active'], ['plugin_rest_usercreation_page3', 'pending'], ['plugin_rest_usercreation_page4', 'pending'], ['plugin_rest_usercreation_page5', 'pending']]}" />
 
     <script>
         console.log(111 + "#{data}")
