--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/external_login.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/external_login.xhtml
@@ -69,7 +69,7 @@
 
                                 <zlb:label
                                     labelFor="login"
-                                    labelText="User name"
+                                    labelText="#{msgs.plugin_rest_usercreation_userName}"
                                     labelHelpText="Lorem ipsum dolor sit amet, consetetur sadipscing elitr"
                                     labelRequired="false" />
 
@@ -88,7 +88,7 @@
 
                                 <zlb:label
                                     labelFor="passwort"
-                                    labelText="Password"
+                                    labelText="#{msgs.plugin_rest_usercreation_password}"
                                     labelHelpText="Lorem ipsum dolor sit amet, consetetur sadipscing elitr"
                                     labelRequired="false" />
 
